--- a/source/fm_commands.lfm
+++ b/source/fm_commands.lfm
@@ -15,7 +15,7 @@ object fmCommands: TfmCommands
   OnCreate = FormCreate
   OnShow = FormShow
   Position = poMainFormCenter
-  LCLVersion = '2.2.6.0'
+  LCLVersion = '3.0.0.3'
   object sgSequences: TStringGrid
     Left = 5
     Height = 240
@@ -30,13 +30,13 @@ object fmCommands: TfmCommands
         MinSize = 12
         MaxSize = 250
         Title.Caption = 'Входная последовательность'
-        Width = 359
+        Width = 250
       end    
       item
         MinSize = 12
         MaxSize = 250
         Title.Caption = 'Ответная последовательность'
-        Width = 359
+        Width = 250
       end>
     FixedCols = 0
     GridLineWidth = 0
@@ -45,8 +45,8 @@ object fmCommands: TfmCommands
     TabOrder = 0
     OnSelectCell = sgSequencesSelectCell
     ColWidths = (
-      359
-      359
+      250
+      250
     )
   end
   object Panel2: TPanel
@@ -122,6 +122,7 @@ object fmCommands: TfmCommands
       ClientHeight = 134
       ClientWidth = 607
       Color = cl3DLight
+      ParentBackground = False
       ParentColor = False
       TabOrder = 0
       object lbInput: TLabel
@@ -213,7 +214,7 @@ object fmCommands: TfmCommands
       end
     end
   end
-  object ActionList1: TActionList
+  object alActionList1: TActionList
     Left = 106
     Top = 238
     object acAdd: TAction
@@ -241,12 +242,5 @@ object fmCommands: TfmCommands
       ImageIndex = 1
       OnExecute = acUpdateExecute
     end
-  end
-  object IniStorageCmd: TIniPropStorage
-    StoredValues = <>
-    OnSaveProperties = IniStorageCmdSaveProperties
-    OnRestoreProperties = IniStorageCmdRestoreProperties
-    Left = 250
-    Top = 238
   end
 end
