--- a/source/fm_settings.lfm
+++ b/source/fm_settings.lfm
@@ -395,7 +395,7 @@ object fmSettings: TfmSettings
       end
       object pValues19: TPanel
         Left = 10
-        Height = 133
+        Height = 129
         Top = 84
         Width = 564
         AutoSize = True
@@ -404,14 +404,14 @@ object fmSettings: TfmSettings
         ChildSizing.VerticalSpacing = 5
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 2
-        ClientHeight = 133
+        ClientHeight = 129
         ClientWidth = 564
         TabOrder = 3
         object cbPanelsLayout: TComboBox
           Left = 0
           Height = 28
           Top = 2
-          Width = 162
+          Width = 125
           ItemHeight = 20
           ItemIndex = 0
           Items.Strings = (
@@ -427,7 +427,7 @@ object fmSettings: TfmSettings
           Text = 'tx - u   rx - d'
         end
         object lbPanelsLayout: TLabel
-          Left = 172
+          Left = 135
           Height = 28
           Top = 2
           Width = 249
@@ -436,49 +436,20 @@ object fmSettings: TfmSettings
           Layout = tlCenter
           ParentColor = False
         end
-        object pDarkTheme: TPanel
+        object cbAppTheme: TComboBox
           Left = 0
-          Height = 32
+          Height = 28
           Top = 35
-          Width = 162
-          AutoSize = True
-          BevelOuter = bvNone
-          BorderStyle = bsSingle
-          ChildSizing.HorizontalSpacing = 10
-          ChildSizing.VerticalSpacing = 5
-          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-          ChildSizing.EnlargeVertical = crsScaleChilds
-          ChildSizing.ControlsPerLine = 1
-          ClientHeight = 28
-          ClientWidth = 158
-          TabOrder = 1
-          object cbAppTheme: TComboBox
-            Left = 0
-            Height = 28
-            Top = 0
-            Width = 158
-            Align = alClient
-            ItemHeight = 20
-            Style = csDropDownList
-            TabOrder = 0
-            Visible = False
-          end
-          object lbAppRestart: TLabel
-            Left = 0
-            Height = 28
-            Top = 0
-            Width = 158
-            Align = alClient
-            Caption = 'Необходим перезапуск!'
-            Font.Style = [fsItalic]
-            Layout = tlCenter
-            ParentColor = False
-            ParentFont = False
-          end
+          Width = 125
+          Enabled = False
+          ItemHeight = 20
+          Style = csDropDownList
+          TabOrder = 3
         end
         object lbAppTheme: TLabel
-          Left = 172
-          Height = 32
+          Left = 135
+          Height = 28
+          Hint = 'Поддержка тем доступна только на Windows 10 1809+'
           Top = 35
           Width = 249
           BorderSpacing.Around = 2
@@ -491,19 +462,19 @@ object fmSettings: TfmSettings
           AnchorSideRight.Side = asrBottom
           Left = 0
           Height = 28
-          Top = 72
-          Width = 162
+          Top = 68
+          Width = 125
           Constraints.MinWidth = 100
           Increment = 10
           MaxValue = 300
           MinValue = 30
-          TabOrder = 2
+          TabOrder = 1
           Value = 100
         end
         object lbAppIconSize: TLabel
-          Left = 172
+          Left = 135
           Height = 28
-          Top = 72
+          Top = 68
           Width = 249
           Caption = 'Размер иконок, %'
           Layout = tlCenter
@@ -514,19 +485,19 @@ object fmSettings: TfmSettings
           AnchorSideRight.Side = asrBottom
           Left = 0
           Height = 28
-          Top = 105
-          Width = 162
+          Top = 101
+          Width = 125
           Constraints.MinWidth = 100
           Increment = 10
           MaxValue = 300
           MinValue = 30
-          TabOrder = 3
+          TabOrder = 2
           Value = 100
         end
         object lbAppFontSize: TLabel
-          Left = 172
+          Left = 135
           Height = 28
-          Top = 105
+          Top = 101
           Width = 249
           Caption = 'Размер шрифта, %'
           Layout = tlCenter
